<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity"
    android:background="#494949"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#a4a4a4"
        android:padding="30dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="end|bottom"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="5"

        >
        <Button

            android:layout_margin="2dp"
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="#a4a4a4"
            android:textSize="40sp"
            android:layout_weight="1"
            android:text="@string/_7"


            android:onClick="onDigit"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"

            android:onClick="onDigit"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"

            android:onClick="onDigit"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"

            android:onClick="onOperator"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"

            android:onClick="onDigit"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"

            android:onClick="onDigit"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"

            android:onClick="onDigit"
            />
        <Button
            android:backgroundTint="#a4a4a4"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"

            android:onClick="onOperator"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"

            android:onClick="onDigit"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"

            android:onClick="onDigit"
            />
        <Button
            android:backgroundTint="#a4a4a4"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"

            android:onClick="onDigit"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnSubstract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"

            android:onClick="onOperator"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"

            android:onClick="onDecimalPoint"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"

            android:onClick="onDigit"
            />
        <Button
           android:textSize="20sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnClear4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="CLR"

            android:onClick="onClear"
            />
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"

            android:onClick="onOperator"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:textSize="40sp"
            android:backgroundTint="#a4a4a4"
            android:layout_margin="2dp"
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"

            android:onClick="onEqual"
            />




    </LinearLayout>



</LinearLayout>
